fix: adjust color variables to improve contrast

--- a/source/css/_partial/sidebar.styl
+++ b/source/css/_partial/sidebar.styl
@@ -101,7 +101,7 @@ $sidebar-state-content
   justify-content: center
   padding: 25px 0
   color: var(--red-0)
-  opacity: .7
+  opacity: .8
   transition: opacity .5s
 
   &:hover
