--- a/source/css/_variables.styl
+++ b/source/css/_variables.styl
@@ -5,19 +5,19 @@
   --red-2: #ff7c7c
   --red-3: #ffafaf
   --red-4: #ffd0d0
-  --red-5: #ffe4e4
-  --red-5-5: #ffecec
-  --red-6: #fff3f3
+  --red-5: #ffecec
+  --red-5-5: #fff3f3
+  --red-6: #fff7f7
 
-  --grey-9: #999
-  --grey-7: #777
+  --grey-9: #888
+  --grey-7: var(--color-default)
 
   --color-archive-year: black
   --color-default: #555
   --color-border: var(--red-3)
   --color-link: var(--red-1)
   --color-background: #eee
-  --color-code-background: #f5f5f5
+  --color-code-background: #f8f8f8
   --color-header-background: rgba(255, 255, 255, 0.9)
   --color-footer-background: #fff
   --color-mobile-nav-background: #fff
@@ -56,8 +56,8 @@
   &:root
     --red-0: var(--red-1)
     --red-4: rgba(255,208,208,0.5)
-    --red-5: rgba(255,228,228,0.2)
-    --red-5-5: rgba(255,236,236,0.1)
+    --red-5: rgba(255,228,228,0.15)
+    --red-5-5: rgba(255,236,236,0.05)
     --red-6: rgba(255,243,243,0.2)
 
     --color-archive-year: #999
